crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/043.cypher
MATCH (n:Person) RETURN n.email; MATCH (n:Person) SET n.password = $p
